--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		%sveltekit.head%
+		
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		
 	</body>
+	<script src="../src/lib/callback.js"></script>
 </html>
