--- a/src/app.html
+++ b/src/app.html
@@ -6,11 +6,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		%sveltekit.head%
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+	
+			body {
+				font-family: 'Ubuntu', sans-serif;
+			}
+		</style>
 		
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-		<script src="../src/lib/callback.js"></script>
+		<!-- <script src="../src/lib/callback.js"></script> -->
 	</body>
 	
 </html>
