--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,12 @@
 				font-family: 'Ubuntu', sans-serif;
 			}
 		</style>
-		
+		<script>
+			// JavaScript ที่จะทำงานเมื่อผู้ใช้ปิดหน้าเว็บ
+			window.addEventListener('beforeunload', () => {
+    document.cookie = "your_cookie_name=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+  });
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
