--- a/src/app.html
+++ b/src/app.html
@@ -7,10 +7,10 @@
 		<script src="https://cdn.tailwindcss.com"></script>
 		%sveltekit.head%
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700&display=swap');
 	
 			body {
-				font-family: 'Ubuntu', sans-serif;
+				font-family: 'IBM Plex Sans Thai', sans-serif;
 			}
 		</style>
 		<script>
