--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://cdn.tailwindcss.com"></script>
+		
 		%sveltekit.head%
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700&display=swap');
@@ -12,15 +15,10 @@
 			body {
 				font-family: 'IBM Plex Sans Thai', sans-serif;
 			}
+			
 		</style>
-		<script>
-			// JavaScript ที่จะทำงานเมื่อผู้ใช้ปิดหน้าเว็บ
-			window.addEventListener('beforeunload', () => {
-    document.cookie = "your_cookie_name=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-  });
-		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" >
 		<div style="display: contents">%sveltekit.body%</div>
 		<!-- <script src="../src/lib/callback.js"></script> -->
 	</body>
